# deserr

./: 404.html  Cargo.toml  README.md  deserialize.html  faq.html  overview.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
.github/workflows/: ci.yml  deploy.yml  publish-binaries.yml
attributes/: container.html  field.html  mod.html  variant.html
benches/: bench.rs
book/: book.toml
book/src/: SUMMARY.md  deserialize.md  faq.md  overview.md
book/src/attributes/: container.md  field.md  mod.md  variant.md
book/src/error/: available.md  custom.md  mod.md
derive/: Cargo.toml
derive/src/: attribute_parser.rs  derive_enum.rs  derive_named_fields.rs  derive_struct.rs  derive_user_provided_function.rs  lib.rs  parse_type.rs
error/: available.html  custom.html  mod.html
examples/: implements_deserr_manually.rs
examples/actix_web_server/: Cargo.toml
examples/actix_web_server/src/: main.rs
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
src/: actix_web.rs  default_error.rs  impls.rs  json.rs  lib.rs  query_params.rs  serde_cs.rs  serde_json.rs  value.rs
src/actix_web/: mod.rs  query_parameters.rs  serde_json.rs
src/axum/: mod.rs  serde_json.rs
src/errors/: helpers.rs  json.rs  mod.rs  query_params.rs
tests/: char-error-message.rs  default.rs  from.rs  integration.rs  json.rs  number-range-error-messages.rs  number.rs  supported_value_types.rs  test_derive.rs
tests/attributes/: default.rs  deny_unknown_fields.rs  error.rs  from.rs  map.rs  missing_field_error.rs  mod.rs  rename_all.rs  skip.rs  tag.rs  try_from.rs  validate.rs  where_predicate.rs
tests/regression/: issue24.rs
tests/ui/: de-container-attr-from-and-try-from-on-single-line.rs  de-container-attr-from-and-try-from-on-single-line.stderr  de-container-attr-from-and-try-from.rs  de-container-attr-from-and-try-from.stderr  de-container-attr-try-from-and-from.rs  de-container-attr-try-from-and-from.stderr  de-double-from-attribute-one-line.rs  de-double-from-attribute-one-line.stderr  de-double-from-attribute.rs  de-double-from-attribute.stderr  de-enum-data.stderr  de-enum-generic.stderr  de-enum-no-tag.rs  de-enum-no-tag.stderr  de-enum-tuple.rs  de-enum-tuple.stderr  de-enum-untagged-with-data.rs  de-enum-untagged-with-data.stderr  de-enum-untagged-with-unnamed-data.rs  de-enum-untagged-with-unnamed-data.stderr  de-field-attr-from-and-try-from-on-single-line.rs  de-field-attr-from-and-try-from-on-single-line.stderr  de-field-attr-from-and-try-from.rs  de-field-attr-from-and-try-from.stderr  de-field-attr-try-from-and-from.rs  de-field-attr-try-from-and-from.stderr  de-tuple-struct.rs  de-tuple-struct.stderr  de-union.rs  de-union.stderr  de-unit-struct.rs  de-unit-struct.stderr
