[package]
name = "deserr"
version = "0.3.0"
authors = ["Lo <loic@meilisearch.com>", "Tamo <tamo@meilisearch.com>"]
license = "MIT OR Apache-2.0"
description = "Deserarialization library with focus on error handling"
repository = "https://github.com/meilisearch/deserr"
readme = "README.md"
exclude = ["benches"]
keywords = ["deserialization", "error"]
edition = "2021"

[dependencies]
serde_json = { version = "1.0", optional = true }
serde-cs = { version = "0.2.4", optional = true }
deserr-internal = { version = "=0.3.0", path = "derive" }

[features]
default = ["serde-json", "serde-cs"]
serde-json = ["serde_json"]
serde-cs = ["dep:serde-cs"]

[dev-dependencies]
automod = "1.0"
insta = { version = "1.23.0", features = ["json"] }
rustversion = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
trybuild = { version = "1.0.49", features = ["diff"] }

[workspace]
members = ["derive"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

