[package]
name = "deserr"
version = "0.6.1"
authors = ["Lo <loic@meilisearch.com>", "Tamo <tamo@meilisearch.com>"]
license = "MIT OR Apache-2.0"
description = "Deserialization library with focus on error handling"
repository = "https://github.com/meilisearch/deserr"
readme = "README.md"
exclude = ["benches"]
keywords = ["deserialization", "error"]
edition = "2021"

[dependencies]
serde_json = { version = "1.0", optional = true }
serde-cs = { version = "0.2.4", optional = true }
actix-web = { version = "4.8.0", default-features = false, optional = true }
futures = { version = "0.3.30", optional = true }
deserr-internal = { version = "=0.6.1", path = "derive" }
strsim = "0.11.1"
actix-http = { version = "3.8.0", optional = true }
actix-utils = { version = "3.0.1", optional = true }
serde_urlencoded = "0.7.1"

[features]
default = ["serde-json", "serde-cs"]
serde-json = ["serde_json"]
serde-cs = ["dep:serde-cs"]
actix-web = ["dep:actix-web", "futures", "actix-http", "actix-utils"]

[dev-dependencies]
automod = "1.0"
insta = { version = "1.39.0", features = ["json"] }
rustversion = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
trybuild = { version = "1.0.96", features = ["diff"] }

[workspace]
members = ["derive", "examples/*"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

