[package]
name = "jayson-internal"
version = "0.1.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Derive macros for Jayson. Use the re-exports from the jayson crate instead."
repository = "https://github.com/meilisearch/jayson"
edition = "2018"
rust-version = "1.36"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.2"
syn = { version = "1.0", features=["extra-traits", "parsing"]}
convert_case = "0.5.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
