[package]
name = "deserr-internal"
version = "0.6.0"
authors = ["Lo <loic@meilisearch.com>", "Tamo <tamo@meilisearch.com>"]
license = "MIT OR Apache-2.0"
description = "Derive macros for Deserr. Use the re-exports from the deserr crate instead."
repository = "https://github.com/meilisearch/deserr"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.36"
syn = { version = "2.0", features=["extra-traits", "parsing"]}
convert_case = "0.6.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
