[package]
name = "example_axum"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
deserr = { path = "../../" }
axum = { version = "0.6.4", features = ["json"]}
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
