[package]
name = "axum"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
deserr = { path = "../../", features = ["axum"] }
axum = { version = "0.8.1", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
